tests/baselines/reference/parserReturnStatement1.d.errors.txt
==== tests/cases/compiler/parserReturnStatement1.d.ts (1 errors) ====
    return;
    ~~~~~~
!!! parserReturnStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.